--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Mart Bangunan</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="description">HelloHello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blankHelloHello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blankHelloHello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blankHelloHello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blankHelloHello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank Hello blank</string>
 </resources>
